Trying to fix dark mode on mobile browser

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 * {
   margin: 0;
   padding: 0;
+	-webkit-appearance: none
 }
 
 ::before,
@@ -637,7 +638,7 @@ li::marker {
 }
 
 /* Media Queries */
-@media screen and (max-width: 35em),screen and (max-height: 45em) {
+@media screen and (max-width: 35em) and (prefers-color-scheme: light),screen and (max-height: 45em) and (prefers-color-scheme: light) {
 	.align > li {
 		width: 100%;
 		min-height: 440px;
